--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,123 @@
+/* General Styling */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    background: #292b2f;
+    color: #fcfcfc;
+}
+
+.wrapper {
+    margin: 0 30% 0 30%;
+    text-align: center;
+}
+
+@media (max-width: 1200px) {
+    .wrapper {
+        margin: 0 20% 0 20%;
+    }
+}
+
+@media (max-width: 572px) {
+    .wrapper {
+        margin: 0 15% 0 15%;
+    }
+}
+
+div {
+    margin: 3rem 0 3rem 0;
+}
+
+@media (max-width: 491px) {
+    div {
+        margin: 2rem 0 2rem 0;
+    }
+}
+
+h1 {
+    margin-top: 3rem;
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+/* Number Input Styling */
+
+.numInput {
+    display: flex;
+    padding: 0;
+    justify-content: space-between;
+}
+
+.numInput input {
+    width: 150px;
+    padding: 2rem 0 2rem 0;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 2rem;
+}
+
+@media (max-width: 768px) {
+    .numInput input {
+        width: 100px;
+        font-size: 1.5rem;
+    }
+}
+
+/* Operator Styling */
+
+.operator {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 170px;
+    left: 30%;
+    right: 30%;
+}
+
+@media (max-width: 491px) {
+    .operator {
+        top: 210px;
+    }
+}
+
+select {
+    padding: 0.8rem 0 0.8rem 0;
+    width: 70px;
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 600;
+    background: #fcfcfc;
+    border: none;
+    border-radius: 20px;
+}
+
+/* Calculate Button Styling */
+
+button {
+    padding: 2rem;
+    width: 100%;
+    font-size: 1.8rem;
+    text-align: center;
+    font-weight: 600;
+    background: #fcfcfc;
+    border: none;
+    border-radius: 20px;
+}
+
+/* Result Styling */
+
+.result {
+    background: #fcfcfc;
+    color: #292b2f;
+    padding: 4rem;
+    width: 100%;
+    border-radius: 20px;
+    font-size: 2.5rem;
+    font-weight: 600;
 }
