--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,8 @@ h1 {
     padding: 0;
     position: absolute;
     top: 170px;
-    left: 30%;
-    right: 30%;
+    left: 45%;
+    right: 45%;
 }
 
 @media (max-width: 491px) {
@@ -108,6 +108,10 @@ button {
     background: #fcfcfc;
     border: none;
     border-radius: 20px;
+}
+
+button:hover {
+    background: #dedede;
 }
 
 /* Result Styling */
