--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* General Styling */
+
 * {
     margin: 0;
     padding: 0;
@@ -95,6 +96,12 @@ select {
     background: #fcfcfc;
     border: none;
     border-radius: 20px;
+}
+
+@media (max-width: 491px) {
+    select {
+        width: 50px;
+    }
 }
 
 /* Calculate Button Styling */
